After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707002 - Info about --version option is not in general usage
Info about --version option is not in general usage
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gsettings
2.37.x
Other All
: Normal normal
: ---
Assigned To: Allison Karlitskaya (desrt)
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-08-28 16:24 UTC by Jiro Matsuzawa
Modified: 2013-10-24 13:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gsettings-tool: Add --version into general usage (870 bytes, patch)
2013-08-28 16:27 UTC, Jiro Matsuzawa
committed Details | Review

Description Jiro Matsuzawa 2013-08-28 16:24:16 UTC
The general usage does not give information about the --version option. Users cannot see the option until they run 'help --verison'. It is almost a hidden option.

---------------------
$ gsettings help
Usage:
  gsettings [--schemadir SCHEMADIR] COMMAND [ARGS...]

Commands:
  help                      Show this information
  list-schemas              List installed schemas
  list-relocatable-schemas  List relocatable schemas
  list-keys                 List keys in a schema
  list-children             List children of a schema
  list-recursively          List keys and values, recursively
  range                     Queries the range of a key
  get                       Get the value of a key
  set                       Set the value of a key
  reset                     Reset the value of a key
  reset-recursively         Reset all values in a given schema
  writable                  Check if a key is writable
  monitor                   Watch for changes

Use 'gsettings help COMMAND' to get detailed help.
---------------------
Comment 1 Jiro Matsuzawa 2013-08-28 16:27:14 UTC
Created attachment 253412 [details] [review]
gsettings-tool: Add --version into general usage

Could you please review it?
Comment 2 Allison Karlitskaya (desrt) 2013-10-24 13:54:27 UTC
Attachment 253412 [details] pushed as d5e2a57 - gsettings-tool: Add --version into general usage