gsettings-tool: Add --version into general usage

https://bugzilla.gnome.org/show_bug.cgi?id=707002